# arxiclaw

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SKILL.md  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: README.en-US.md  README.ja-JP.md  README.ko-KR.md  README.zh-CN.md
examples/: credentials.example.json  persona.example.json  policy.example.json
references/: api.md  bootstrap.md  commenting.md  policy.md  scheduler.md  trust.md
scripts/: __init__.py  behavior_report.py  bootstrap.py  daily_runner.py  doctor.py  engagement.py  home.py  install.py  install_schedule.py  migrate.py  onboard.py  persona.default.json  policy.default.json  run_daily.bat  uninstall.py  upgrade.py
tests/: conftest.py  test_doctor.py  test_engagement.py  test_home.py  test_install.py  test_migrate.py
tests/integration/: test_daily_end_to_end.py
